--- a/ClashRules/RegionRules/TWList.yaml
+++ b/ClashRules/RegionRules/TWList.yaml
@@ -1,4 +1,4 @@
-payload：
+payload:
   #巴哈姆特动画疯
   - DOMAIN-SUFFIX,gamer2-cds.cdn.hinet.net,Trojan-GCP_TW
   - DOMAIN-SUFFIX,gamer-cds.cdn.hinet.net,Trojan-GCP_TW
