--- a/ClashRules/BlackList.yaml
+++ b/ClashRules/BlackList.yaml
@@ -31,7 +31,7 @@ payload:
   - DOMAIN-SUFFIX,pixiv.org
   - DOMAIN-SUFFIX,pixiv.co.jp
   - DOMAIN-SUFFIX,cloudfront.net
-  - DOMAIN-SUFFIX,akamaized.net
+  - DOMAIN-SUFFIX,melonbooks.akamaized.net
   - DOMAIN-SUFFIX,patreon.com
   - DOMAIN-SUFFIX,xvideos-cdn.com
   - DOMAIN-SUFFIX,south-plus.net
