--- a/ClashRules/BlackList.yaml
+++ b/ClashRules/BlackList.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN-SUFFIX,steamstatic.com
   - DOMAIN-SUFFIX,patreonusercontent.com
   - DOMAIN-SUFFIX,quizlet.com
   - DOMAIN-SUFFIX,amazon.co.jp
