--- a/ClashRules/DirectList.yaml
+++ b/ClashRules/DirectList.yaml
@@ -1,6 +1,6 @@
 payload:
   - DOMAIN,www.cphub.net
-  - DOMAIN,checkip.synology.com
+  - DOMAIN-SUFFIX,synology.com
   - DOMAIN,s1.wrangler.monster
   - DOMAIN-SUFFIX,upos-hz-mirrorakam.akamaized.net
   # UU AOE2
