--- a/ClashRules/Inbound/InboundRules.yaml
+++ b/ClashRules/Inbound/InboundRules.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,bilibili.com
   - DOMAIN-SUFFIX,bilivideo.com
-#  - DOMAIN-SUFFIX,hdslb.com
+  - DOMAIN-SUFFIX,hdslb.com
   # > Tencent Video
   - DOMAIN-SUFFIX,video.qq.com
   - DOMAIN-SUFFIX,i.qq.com
