--- a/ClashRules/Inbound/InboundRules.yaml
+++ b/ClashRules/Inbound/InboundRules.yaml
@@ -4,9 +4,7 @@ payload:
   - DOMAIN-SUFFIX,acfun.cn
   - DOMAIN-SUFFIX,aixifan.com
   # > bilibili
-  - DOMAIN-SUFFIX,biliapi.net
-  - DOMAIN-SUFFIX,bilibili.com
-  - DOMAIN-SUFFIX,bilivideo.com
+  - DOMAIN-SUFFIX,www.bilibili.com
   - DOMAIN-SUFFIX,hdslb.com
   # > Tencent Video
   - DOMAIN-SUFFIX,video.qq.com
