--- a/ClashRules/UnlockRegion.yaml
+++ b/ClashRules/UnlockRegion.yaml
@@ -6,6 +6,7 @@ payload:
 
 ##TW
   - DOMAIN,www.manhuagui.com
+  - DOMAIN,cf.hamreus.com
   #Bilibili-HMT
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,biliapi.com
