--- a/ClashRules/ProxyList.yaml
+++ b/ClashRules/ProxyList.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN,curl.se
   - DOMAIN-SUFFIX,docker.com
   - DOMAIN-SUFFIX,merlinblog.xyz
   - DOMAIN-SUFFIX,cloudflare.steamstatic.com
