--- a/ClashRules/ProxyList.yaml
+++ b/ClashRules/ProxyList.yaml
@@ -1,6 +1,7 @@
 payload:
   - DOMAIN-SUFFIX,cdn12.com
   - DOMAIN-SUFFIX,cloudfront.net
+  - DOMAIN,github.com
   - DOMAIN,uploads.undergrounded.net
   - DOMAIN,bwh88.net
   - DOMAIN,curl.se
