--- a/ClashRules/ProxyList.yaml
+++ b/ClashRules/ProxyList.yaml
@@ -2,6 +2,8 @@ payload:
   - DOMAIN-SUFFIX,cdn12.com
   - DOMAIN-SUFFIX,cloudfront.net
   - DOMAIN,github.com
+  - DOMAIN,raw.githubusercontent.com
+  - DOMAIN,ssl.gstatic.com
   - DOMAIN,uploads.undergrounded.net
   - DOMAIN,bwh88.net
   - DOMAIN,curl.se
