--- a/ClashRules/UnlockRegion.yaml
+++ b/ClashRules/UnlockRegion.yaml
@@ -1,12 +1,16 @@
 payload:
 ##JP
-
   #DMM
   - DOMAIN-SUFFIX,dmm.co.jp
 
 ##TW
   - DOMAIN,www.manhuagui.com
   - DOMAIN,i.hamreus.com
+  #巴哈姆特动画疯
+  - DOMAIN,gamer2-cds.cdn.hinet.net,Trojan-GCP_TW
+  - DOMAIN,gamer-cds.cdn.hinet.net,Trojan-GCP_TW
+  - DOMAIN-SUFFIX,bahamut.com.tw,Trojan-GCP_TW
+  - DOMAIN-SUFFIX,gamer.com.tw,Trojan-GCP_TW
   #Bilibili-HMT
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,biliapi.com
@@ -21,8 +25,3 @@ payload:
   - IP-CIDR,164.52.76.18/32,no-resolve
   - IP-CIDR,128.1.62.200/32,no-resolve
   - IP-CIDR,128.1.62.201/32,no-resolve
-  #巴哈姆特动画疯
-  - DOMAIN-SUFFIX,gamer2-cds.cdn.hinet.net,Trojan-GCP_TW
-  - DOMAIN-SUFFIX,gamer-cds.cdn.hinet.net,Trojan-GCP_TW
-  - DOMAIN-SUFFIX,bahamut.com.tw,Trojan-GCP_TW
-  - DOMAIN-SUFFIX,gamer.com.tw,Trojan-GCP_TW
