--- a/QuanX/Rewrite/General.conf
+++ b/QuanX/Rewrite/General.conf
@@ -1,11 +1,20 @@
 hostname = *.googlevideo.com,www.youtube.com,s.youtube.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, api.m.jd.com
 
 # YouTube AD
-(^https?:\/\/[\w-]+\.googlevideo\.com\/.+)(ctier=L)(&.+) url 302 $1$3
-^https?:\/\/[\w-]+\.googlevideo\.com\/.+&(oad|ctier) url reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= url reject
+https?:\/\/.+.googlevideo.com\/ptracking\?pltype=adhost url reject
+https?:\/\/.+.youtube.com\/api\/stats\/ads url reject
+https?:\/\/.+.youtube.com\/get_midroll_ url reject
+https?:\/\/.+.youtube.com\/pagead\/ url reject
+https?:\/\/.+.youtube.com\/ptracking\? url reject
+https?:\/\/.+.youtube.com\/_get_ads url reject
+https?:\/\/premiumyva.appspot.com\/vmclickstoadvertisersite url reject
+https?:\/\/s0.2mdn.net\/ads\/ url reject
+https?:\/\/stats.tubemogul.com\/stats\/ url reject
+https?:\/\/youtubei.googleapis.com\/.+ad_break url reject
+https?:\/\/youtubei.googleapis.com\/youtubei\/.+(ad|log) url reject
+https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adformat url reject
+https?:\/\/[\w-]+\.googlevideo\.com\/.+&oad url reject
+https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-request-body https://choler.github.io/Surge/Script/YouTube.js
 
 # 微博 AD
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
