--- a/QuanX/Rewrite/General.conf
+++ b/QuanX/Rewrite/General.conf
@@ -15,6 +15,7 @@ https?:\/\/youtubei.googleapis.com\/youtubei\/.+(ad|log) url reject-200
 https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adformat url reject-200
 https?:\/\/[\w-]+\.googlevideo\.com\/.+&oad url reject-200
 https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-request-body https://choler.github.io/Surge/Script/YouTube.js
+ctier=[A-Z] citer=A 302
 
 # 微博 AD
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
