--- a/QuanX/Rewrite/General.conf
+++ b/QuanX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = *.googlevideo.com,www.youtube.com,s.youtube.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, api.m.jd.com
+hostname = *.googlevideo.com, *.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, api.m.jd.com
 
 # YouTube AD
 https?:\/\/.+.googlevideo.com\/ptracking\?pltype=adhost url reject-200
