--- a/QuanX/Rewrite/General.conf
+++ b/QuanX/Rewrite/General.conf
@@ -1,21 +1,21 @@
 hostname = *.googlevideo.com, *.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, api.m.jd.com
 
 # YouTube AD
-https?:\/\/.+.googlevideo.com\/ptracking\?pltype=adhost url reject-200
-https?:\/\/.+.youtube.com\/api\/stats\/ads url reject-200
-https?:\/\/.+.youtube.com\/get_midroll_ url reject-200
-https?:\/\/.+.youtube.com\/pagead\/ url reject-200
-https?:\/\/.+.youtube.com\/ptracking\? url reject-200
-https?:\/\/.+.youtube.com\/_get_ads url reject-200
-https?:\/\/premiumyva.appspot.com\/vmclickstoadvertisersite url reject-200
-https?:\/\/s0.2mdn.net\/ads\/ url reject-200
-https?:\/\/stats.tubemogul.com\/stats\/ url reject-200
-https?:\/\/youtubei.googleapis.com\/.+ad_break url reject-200
-https?:\/\/youtubei.googleapis.com\/youtubei\/.+(ad|log) url reject-200
-https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adformat url reject-200
-https?:\/\/[\w-]+\.googlevideo\.com\/.+&oad url reject-200
-https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-request-body https://choler.github.io/Surge/Script/YouTube.js
 ctier=[A-Z] url 302 citer=A
+https?:\/\/.+.googlevideo.com\/ptracking\?pltype=adhost url reject
+https?:\/\/.+.youtube.com\/api\/stats\/ads url reject
+https?:\/\/.+.youtube.com\/get_midroll_ url reject
+https?:\/\/.+.youtube.com\/pagead\/ url reject
+https?:\/\/.+.youtube.com\/ptracking\? url reject
+https?:\/\/.+.youtube.com\/_get_ads url reject
+https?:\/\/premiumyva.appspot.com\/vmclickstoadvertisersite url reject
+https?:\/\/s0.2mdn.net\/ads\/ url reject
+https?:\/\/stats.tubemogul.com\/stats\/ url reject
+https?:\/\/youtubei.googleapis.com\/.+ad_break url reject
+https?:\/\/youtubei.googleapis.com\/youtubei\/.+(ad|log) url reject
+https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adformat url reject
+https?:\/\/[\w-]+\.googlevideo\.com\/.+&oad url reject
+https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-request-body https://choler.github.io/Surge/Script/YouTube.js
 
 # 微博 AD
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
