--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN,doubibackup.com
 
 #SUFFIX
+  - DOMAIN-SUFFIX,msftauth.net
   - DOMAIN-SUFFIX,blinkload.org
   - DOMAIN-SUFFIX,fast.com
   - DOMAIN-SUFFIX,discord.com
