--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -1,6 +1,6 @@
 payload:
   - DOMAIN,login.microsoftonline.com
-  - DOMAIN,login.live.com
+#  - DOMAIN,login.live.com
   - DOMAIN,coursehero.com
   - DOMAIN,uploads.ungrounded.net
   - DOMAIN,bwh88.net
