--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -1,5 +1,5 @@
 payload:
-  - DOMAIN,login.microsoftonline.com
+#  - DOMAIN,login.microsoftonline.com
 #  - DOMAIN,login.live.com
   - DOMAIN,coursehero.com
   - DOMAIN,uploads.ungrounded.net
@@ -15,7 +15,7 @@ payload:
 
 #SUFFIX
   - DOMAIN-SUFFIX,52.mk
-  - DOMAIN-SUFFIX,msftauth.net
+#  - DOMAIN-SUFFIX,msftauth.net
   - DOMAIN-SUFFIX,blinkload.org
   - DOMAIN-SUFFIX,fast.com
   - DOMAIN-SUFFIX,discord.com
