--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -13,6 +13,7 @@ payload:
   - DOMAIN,doubibackup.com
 
 #SUFFIX
+  - DOMAIN-SUFFIX,v2ex.com
   - DOMAIN-SUFFIX,discord.media
   - DOMAIN-SUFFIX,api.mega.co.nz
   - DOMAIN-SUFFIX,opensubtitles.org
