--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -12,7 +12,9 @@ payload:
   - DOMAIN,stackoverflow.com
   - DOMAIN,doubibackup.com
   - DOMAIN,api.themoviedb.org
-  - DOMAIN,linear.tv.apple.com
+  - DOMAIN-SUFFIX,tv.apple.com
+  - DOMAIN,hls.itunes.apple.com
+  - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
 
 #SUFFIX
