--- a/Clash/ProxyList.yaml
+++ b/Clash/ProxyList.yaml
@@ -16,6 +16,9 @@ payload:
   - DOMAIN,hls.itunes.apple.com
   - DOMAIN,hls-amt.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
+  - PROCESS-NAME,TV
+  - USER-AGENT,AppleTV*
+  - USER-AGENT,com.apple.tv*
 
 #SUFFIX
   - DOMAIN-SUFFIX,v2ex.com
