--- a/Clash/DirectList.yaml
+++ b/Clash/DirectList.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN,leechall.com
   - DOMAIN,www.cphub.net
   - DOMAIN-SUFFIX,synology.com
   - DOMAIN-SUFFIX,upos-hz-mirrorakam.akamaized.net
