--- a/QuanX/Rewrite/General.conf
+++ b/QuanX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = *.googlevideo.com, *.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com
+hostname = *.googlevideo.com, *.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com, spclient.wg.spotify.com
 
 # YouTube AD
 https?:\/\/.+.googlevideo.com\/ptracking\?pltype=adhost url reject
@@ -28,3 +28,7 @@ https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-request-body h
 
 # 解锁Bilibili 1080P+
 https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/Sunert/Script/master/Script/Bilibili/BiliHD.js
+
+#Spotify
+^https\:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
+
