--- a/Clash/DirectList.yaml
+++ b/Clash/DirectList.yaml
@@ -6,7 +6,7 @@ payload:
   - DOMAIN-SUFFIX,ip.cn
   - DOMAIN-SUFFIX,gov.cn
   - DOMAIN-SUFFIX,vmware.com
-  - DOMAIN-SUFFIX,rapidgator.net
+  # - DOMAIN-SUFFIX,rapidgator.net
   - DOMAIN-SUFFIX,steamusercontent-a.akamaihd.net
   - DOMAIN-SUFFIX,steam-chat.com
 
