--- a/Clash/DirectList.yaml
+++ b/Clash/DirectList.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN,leechall.com
+  - DOMAIN,neodebrid.com
   - DOMAIN,www.cphub.net
   - DOMAIN-SUFFIX,synology.com
   - DOMAIN-SUFFIX,upos-hz-mirrorakam.akamaized.net
