--- a/Clash/DirectList.yaml
+++ b/Clash/DirectList.yaml
@@ -10,6 +10,7 @@ payload:
   # - DOMAIN-SUFFIX,rapidgator.net
   - DOMAIN-SUFFIX,steamusercontent-a.akamaihd.net
   - DOMAIN-SUFFIX,steam-chat.com
+  - DOMAIN-SUFFIX,escapefromtarkov.com
 
   # UU AOE2
   - DOMAIN-SUFFIX,aoe-api.reliclink.com
