--- a/BlockedKR.yaml
+++ b/BlockedKR.yaml
@@ -2,3 +2,4 @@ payload:
   - DOMAIN-SUFFIX,sankakucomplex.com
   - DOMAIN-SUFFIX,nyaa.si
   - DOMAIN-SUFFIX,kemono.party
+  - DOMAIN-SUFFIX,coomer.party
