--- a/BlockedKR.yaml
+++ b/BlockedKR.yaml
@@ -3,3 +3,4 @@ payload:
   - DOMAIN-SUFFIX,nyaa.si
   - DOMAIN-SUFFIX,kemono.party
   - DOMAIN-SUFFIX,coomer.party
+  - DOMAIN-SUFFIX,rule34video.com
