--- a/Download.yaml
+++ b/Download.yaml
@@ -3,3 +3,6 @@ payload:
   - DOMAIN-SUFFIX,katfile.com
   - DOMAIN-SUFFIX,rosefile.net
   - DOMAIN-SUFFIX,fikper.com
+  - DOMAIN-SUFFIX,mega.co.nz
+  - DOMAIN-SUFFIX,mega.io
+  - DOMAIN-SUFFIX,mega.nz
