--- a/ProxyList.yaml
+++ b/ProxyList.yaml
@@ -56,6 +56,7 @@ payload:
   - DOMAIN-SUFFIX,ssllabs.com
   - DOMAIN-SUFFIX,qualys.com
   - DOMAIN-SUFFIX,newlearner.site
+  - DOMAIN-SUFFIX,docker.io
 
 #JP
   - DOMAIN-SUFFIX,getchu.com
