--- a/ProxyList.yaml
+++ b/ProxyList.yaml
@@ -82,6 +82,7 @@ payload:
   - DOMAIN-SUFFIX,cloudflare.com
 
 #??????????????????????????????????????????
+  - DOMAIN-SUFFIX,image.acg.lol
   - DOMAIN-SUFFIX,sankakucomplex.com
   - DOMAIN-SUFFIX,iwara.tv
   - DOMAIN-SUFFIX,exhentai.org
