--- a/DirectList.yaml
+++ b/DirectList.yaml
@@ -33,6 +33,7 @@ payload:
   - PROCESS-NAME,WebTorrent Helper
   
   # Special
+  - PROCESS-NAME,Parsec
   - DOMAIN-SUFFIX,ryoko.cc
   - DOMAIN-SUFFIX,quickconnect.cn
   - DOMAIN-SUFFIX,quickconnect.to
