--- a/DirectList.yaml
+++ b/DirectList.yaml
@@ -33,8 +33,7 @@ payload:
   - PROCESS-NAME,WebTorrent Helper
   
   # Special
-  - PROCESS-NAME,Parsec
-  - DOMAIN-SUFFIX,parsecusercontent.com
+  - PROCESS-NAME,parsecd
   - DOMAIN-SUFFIX,ryoko.cc
   - DOMAIN-SUFFIX,quickconnect.cn
   - DOMAIN-SUFFIX,quickconnect.to
