--- a/Kemono.yaml
+++ b/Kemono.yaml
@@ -1,5 +1,3 @@
 payload:
-  - DOMAIN-SUFFIX,kemono.party
-  - DOMAIN-SUFFIX,kemono.su
-  - DOMAIN-SUFFIX,coomer.party
-  - DOMAIN-SUFFIX,coomer.su
+  - DOMAIN-SUFFIX,kemono.cr
+  - DOMAIN-SUFFIX,coomer.st
