--- a/ProxyList.yaml
+++ b/ProxyList.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN,gamestream.nvidia.com
   
 #SUFFIX
+  - DOMAIN-SUFFIX,yahoo.com
   - DOMAIN-SUFFIX,nintendowifi.net
   - DOMAIN-SUFFIX,nintendo.net
   - DOMAIN-SUFFIX,linkedin.com
